Resolve several data races in main testing
1. edit the logger variable _before_ using it in the reaper

2. no need to call `main()` in parallel, just call in parallel
a suitable client as suggested in chat by @robertodauria

3. enable race detector when running tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,5 +8,5 @@ before_script:
 - go get github.com/mattn/goveralls
 
 script:
-- go test -v -coverprofile=coverage.cov -coverpkg=./... ./...
+- go test -race -v -coverprofile=coverage.cov -coverpkg=./... ./...
 - $GOPATH/bin/goveralls -coverprofile=coverage.cov -service=travis-ci
