--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,16 +1,14 @@
-name: golang
+name: coverage
 on:
   pull_request:
   push:
-  schedule:
-    - cron: "17 14 * * 4"
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/setup-go@v1
         with:
-          go-version: "1.15"
+          go-version: "1.18.3"
       - uses: actions/checkout@v2
       - run: go test -race -v -coverprofile=dash.cov -coverpkg=./... ./...
       - uses: shogo82148/actions-goveralls@v1
