--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,20 +1,26 @@
+# Run tests and compute code coverage
 name: coverage
 on:
   pull_request:
   push:
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v1
+      - uses: actions/setup-go@v5
         with:
-          go-version: "1.20"
-      - uses: actions/checkout@v2
+          go-version: "1.23"
+
+      - uses: actions/checkout@v4
+
       - run: go test -race -v -coverprofile=dash.cov -coverpkg=./... ./...
+
       - uses: shogo82148/actions-goveralls@v1
         with:
           path-to-profile: dash.cov
           parallel: true
+
   finish:
     needs: test
     runs-on: ubuntu-latest
