--- a/.github/workflows/privacy.yml
+++ b/.github/workflows/privacy.yml
@@ -1,16 +1,21 @@
+# Make sure the client doesn't run successfully without the -y flag
 name: privacy
 on:
   pull_request:
   push:
+
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/setup-go@v1
+      - uses: actions/setup-go@v5
         with:
-          go-version: "1.20"
-      - uses: actions/checkout@v2
+          go-version: "1.23"
+
+      - uses: actions/checkout@v4
+
       - run: go build -v ./cmd/dash-client
+
       - run: |
           if ./dash-client; then
             echo "expected this command to fail"
