--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -9,5 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - run: make buildcontainer
